--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -49,9 +49,11 @@ dependencies:
   image_picker: ^1.1.2
   latlong2: ^0.9.1
   logger: ^2.6.0
+  network_info_plus: ^6.1.4
   path_provider: ^2.1.5
   permission_handler: ^12.0.1
   shared_preferences: ^2.5.3
+  url_launcher: ^6.3.2
   uuid: ^4.5.1
 
 dev_dependencies:
